# real-time-ingestion

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: run-tests.yml
.qodo/: history.sqlite
app/: Dockerfile  main.py  metrics.py
app/alembic/: env.py
app/alembic/versions/: fbdc1cf34610_initial_migration.py
app/api/: deps.py  exceptions.py
app/api/v1/: api.py
app/api/v1/endpoints/: customer_insights.py  game.py  genre.py  ingestion.py  last_games_view.py  last_product_view.py  publisher.py  session_insights.py  user.py
app/core/: config.py  events.py  gunicorn_config.json  gunicorn_config.py  logging.py
app/db/: opensearch_client.py  postgres_pool.py  redis_client.py
app/migrations/: env.py
app/migrations/versions/: 6acbf18c9749_fix_webevents_game_relationship.py  c92ad5efd4dd_initial_migration.py
app/models/: __init__.py  game_store.py  ingestion_mapping.json  web_event.py
app/schemas/: customer_insights.py  game.py  genre.py  ingestion.py  last_viewed.py  publisher.py  response_base.py  session_insights.py  user.py
app/services/: customer_insights_service.py  exceptions.py  game_service.py  genre_service.py  ingestion_service.py  publisher_service.py  retrieve_last_viewed.py  user_service.py
config/: prometheus.yml
migrations/: env.py
migrations/versions/: 29defee39f2f_initial.py
scripts/: README.md  create_index.py  init.sql  seed_data.sql  seed_database.py
tests/: conftest.py  test_schemas.py
tests/api/: test_v1_ingestion.py  test_v1_last_view.py  test_v1_session_insights.py  test_v1_user.py
tests/load/: README.md  locust.conf  locustfile.py
(+1 files in other folders)
